codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rename_account_files_popup_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Rename Account Files
  Misnamed saved auth files are ignored until they use the expected account id.
  This session: API key (...test)
  Shared active account: none

› 1. Rename all usable files  Rename all 1 usable misnamed account file(s).
  2. rename-popup.json        rename-popup@example.com (Pro). Rename to chatgpt-
                              5ed35e45a0a507c7.json to make it usable.

  Press enter to confirm or esc to go back
